--- a/src/styles/_icons.scss
+++ b/src/styles/_icons.scss
@@ -32,9 +32,27 @@
 }
 
 .materialIconSkillsDetails {
-  width: 40px;
+  font-size: 30px;
   display: block;
   color: #d3c9c0;
+}
+
+.materialIconsSkills {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 0px;
+}
+
+#skills-height
+  > div
+  > div:nth-child(2)
+  > div
+  > div
+  > div:nth-child(6)
+  > div
+  > svg {
+  margin: 0px;
 }
 
 @media only screen and (max-width: 400px) {
