--- a/src/styles/_icons.scss
+++ b/src/styles/_icons.scss
@@ -44,6 +44,11 @@
   margin: 0px;
 }
 
+.material-ui-icons {
+  display: flex;
+  flex-direction: column;
+}
+
 #skills-height
   > div
   > div:nth-child(2)
